added jasmine to dev section of packages.json

--- a/package.json
+++ b/package.json
@@ -1442,6 +1442,7 @@
     }
   },
   "devDependencies": {
+    "jasmine": "^3.6.1",
     "jest": "^26.4.2",
     "mongodb-memory-server": "^6.7.2"
   }
