--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
       "resolved": "https://registry.npmjs.org/balanced-match/-/balanced-match-1.0.0.tgz",
       "version": "1.0.0"
     },
+    "bcrypt": "^5.0.0",
     "binary-extensions": {
       "integrity": "sha512-1Yj8h9Q+QDF5FzhMs/c9+6UntbD5MkRfRwac8DoEm9ZfUBZ7tZ55YcGVAzEe4bXsdQHEk+s9S5wsOKVdZrw0tQ==",
       "resolved": "https://registry.npmjs.org/binary-extensions/-/binary-extensions-2.1.0.tgz",
@@ -326,6 +327,7 @@
       "resolved": "https://registry.npmjs.org/configstore/-/configstore-5.0.1.tgz",
       "version": "5.0.1"
     },
+    "connect-flash": "^0.1.1",
     "content-disposition": {
       "integrity": "sha512-ExO0774ikEObIAEV9kDo50o+79VCUdEB6n6lzKgGwupcVeRlhrj3qGAfwq8G6uBJjkqLrhT0qEYFcWng8z1z0g==",
       "requires": {
@@ -458,6 +460,7 @@
       "version": "1.8.1"
     },
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "filelist": {
       "integrity": "sha512-8zSK6Nu0DQIC08mUC46sWGXi+q3GGpKydAG36k+JDba6VRpkevvOWUW5a/PhShij4+vHT9M+ghgG7eM+a9JDUQ==",
       "requires": {
@@ -920,6 +923,8 @@
       "resolved": "https://registry.npmjs.org/parseurl/-/parseurl-1.3.3.tgz",
       "version": "1.3.3"
     },
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "path-to-regexp": {
       "integrity": "sha1-32BBeABfUi8V60SQ5yR6G/qmf4w=",
       "resolved": "https://registry.npmjs.org/path-to-regexp/-/path-to-regexp-0.1.7.tgz",
